# gndg-v3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auto_debug.bat  auto_debug.py  launch.json
.github/workflows/: build.yml  ci.yml
assets/: shader.frag  shader.vert
assets/shaders/: basic.frag  basic.vert
include/: shader_utils.h
shaders/: basic.frag  basic.vert
src/: loader.cpp  loader.h  main.cpp  shader_utils.cpp
